--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -3,20 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product List</title>
+    <title>List of Products</title>
 </head>
+
 <body>
-    <h1>Lista de Productos</h1>
-    <ul>
-        {{#each products}}
-            <li>
+
+<div class="infoProd">
+    <h1>Product list</h1>
+    <div class="detalleProd">
+        <div class="product-container">
+            {{#each products}}
+            <div class="product">
                 <h2>{{this.title}}</h2>
-                <p>{{this.description}}</p>
+                <h3>{{this.description}}</h3>
                 <p>Precio: ${{this.price}}</p>
-                <p>Categoría: {{this.category}}</p>
-                <img src="{{this.thumbnails}}" alt="{{this.title}}" width="200">
-            </li>
-        {{/each}}
-    </ul>
+                <p>Categoria: {{this.category}}</p>
+                <a href="/api/products/{{this._id}}">Ver Detalle</a>
+            </div>
+            {{/each}}
+        </div>
+    </div>
+    
+    <div class="pagination">
+        <p>Página: {{page}}</p>
+        <p>Total Páginas: {{totalPages}}</p>
+        {{#if hasPrevPage}}
+        <a href="{{prevLink}}">Pagina Anterior</a>
+        {{/if}}
+        {{#if hasNextPage}}
+        <a href="{{nextLink}}">Pagina Siguiente</a>
+        {{/if}}
+    </div>
+</div>
+
 </body>
 </html>
