funciona register y un poco login de github

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -11,11 +11,11 @@
 <div class="user-links">
 
         <p>Bienvenido, {{user.first_name}} {{user.last_name}} - {{user.rol}}</p>
-        <a href="/api/logout">Cerrar Sesion</a>
+        <a href="/api/sessions/logout">Cerrar Sesion</a>
 
     <div>
-        <a href="/api/login">Iniciar Sesion</a>
-        <a href="/api/register">Registrarse</a>
+        <a href="/api/sessions/login">Iniciar Sesion</a>
+        <a href="/api/sessions/register">Registrarse</a>
     </div>
 </div>
 
