--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -16,7 +16,7 @@
         <p>Correo Electronico: {{email}}</p>
         <p>Edad: {{age}}</p>
         <p>Rol: {{rol}}</p>
-        <a href="/api/logout">Cerrar Sesion</a>
+        <a href="/api/sessions/logout">Cerrar Sesion</a>
     </div>
 
 </body>
